package org.example.behavioral.mediator;

public interface Mediator  {
    void send(String message, Colleage colleage);
}
