@startuml

title __MEDIATOR's Class Diagram__\n

  namespace org.example {
    namespace behavioral.mediator {
      abstract class org.example.behavioral.mediator.Colleage {
          + Colleage()
          {abstract} + messageReceived()
          {abstract} + send()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.mediator {
      class org.example.behavioral.mediator.ConcreteColleage1 {
          + ConcreteColleage1()
          + messageReceived()
          + send()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.mediator {
      class org.example.behavioral.mediator.ConcreteColleage2 {
          + ConcreteColleage2()
          + messageReceived()
          + send()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.mediator {
      class org.example.behavioral.mediator.ConcreteMediator {
          + send()
          + setUser1()
          + setUser2()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.mediator {
      interface org.example.behavioral.mediator.Mediator {
          {abstract} + send()
      }
    }
  }
  

  org.example.behavioral.mediator.Colleage o-- org.example.behavioral.mediator.Mediator : mediator
  org.example.behavioral.mediator.ConcreteColleage1 -up-|> org.example.behavioral.mediator.Colleage
  org.example.behavioral.mediator.ConcreteColleage2 -up-|> org.example.behavioral.mediator.Colleage
  org.example.behavioral.mediator.ConcreteMediator .up.|> org.example.behavioral.mediator.Mediator
  org.example.behavioral.mediator.ConcreteMediator o-- org.example.behavioral.mediator.ConcreteColleage1 : user1
  org.example.behavioral.mediator.ConcreteMediator o-- org.example.behavioral.mediator.ConcreteColleage2 : user2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
